RESOLVED FIXED304384
[OpenXR] ASSERTION FAILED: WebCore::GLContext::current() in ~OpenXRLayer
https://bugs.webkit.org/show_bug.cgi?id=304384
Summary [OpenXR] ASSERTION FAILED: WebCore::GLContext::current() in ~OpenXRLayer
Fujii Hironori
Reported 2025-12-17 21:55:52 PST
Created attachment 477776 [details] test case 1. Start monado-service 2. ./Tools/Scripts/run-minibrowser --gtk --debug 3. Load the test content 4. Click "click" 5. Accept "Permission Reuqest" 6. Close the MiniBrowser 7. ASSERTION FAILED ASSERTION FAILED: WebCore::GLContext::current() ../../../Source/WebKit/UIProcess/XR/openxr/OpenXRLayer.cpp(62) : virtual WebKit::OpenXRLayer::~OpenXRLayer() 1 0x7f987bb28fcb WebKit::OpenXRLayer::~OpenXRLayer() 2 0x7f987bb38a09 WebKit::OpenXRLayerProjection::~OpenXRLayerProjection() 3 0x7f987bb38a29 WebKit::OpenXRLayerProjection::~OpenXRLayerProjection() 4 0x7f987bb3be6c std::default_delete<WebKit::OpenXRLayer>::operator()(WebKit::OpenXRLayer*) const 5 0x7f987bb3bde3 std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> >::~unique_ptr() 6 0x7f987bb3bd89 WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >::~KeyValuePair() 7 0x7f987bb3bd17 WTF::HashTable<int, WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > > >, WTF::DefaultHash<int>, WTF::HashMap<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> >, WTF::DefaultHash<int>, WTF::HashTraits<int>, WTF::HashTraits<std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<int>, WTF::FastMalloc>::deallocateTable(WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >*) 8 0x7f987bb6f809 WTF::HashTable<int, WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > > >, WTF::DefaultHash<int>, WTF::HashMap<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> >, WTF::DefaultHash<int>, WTF::HashTraits<int>, WTF::HashTraits<std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<int>, WTF::FastMalloc>::clear() 9 0x7f987bb31885 WTF::HashMap<int, std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> >, WTF::DefaultHash<int>, WTF::HashTraits<int>, WTF::HashTraits<std::unique_ptr<WebKit::OpenXRLayer, std::default_delete<WebKit::OpenXRLayer> > >, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::clear() 10 0x7f987bb317e5 WebKit::OpenXRCoordinator::cleanupSessionAndAssociatedResources() 11 0x7f987bb31949 WebKit::OpenXRCoordinator::cleanupAllResources() 12 0x7f987bb31acc WebKit::OpenXRCoordinator::handleSessionStateChange() 13 0x7f987bb31d05 WebKit::OpenXRCoordinator::pollEvents() 14 0x7f987bb34f05 WebKit::OpenXRCoordinator::renderLoop(WTF::Box<WebKit::OpenXRCoordinator::RenderState>) 15 0x7f987bb46f4b WebKit::OpenXRCoordinator::endSessionIfExists(WebKit::WebPageProxy&)::$_0::operator()(WebKit::OpenXRCoordinator::Active&) const::{lambda()#1}::operator()() const 16 0x7f987bb46eb9 WTF::Detail::CallableWrapper<WebKit::OpenXRCoordinator::endSessionIfExists(WebKit::WebPageProxy&)::$_0::operator()(WebKit::OpenXRCoordinator::Active&) const::{lambda()#1}, void>::call() 17 0x7f986cd7b0d7 WTF::Function<void ()>::operator()() const 18 0x7f986ecd457d WTF::WorkQueueBase::dispatchSync(WTF::Function<void ()>&&)::$_0::operator()() 19 0x7f986ecd4559 WTF::Detail::CallableWrapper<WTF::WorkQueueBase::dispatchSync(WTF::Function<void ()>&&)::$_0, void>::call() 20 0x7f986cd7b0d7 WTF::Function<void ()>::operator()() const 21 0x7f986ed3e389 WTF::WorkQueueBase::dispatch(WTF::Function<void ()>&&)::$_0::operator()() const 22 0x7f986ed3e209 WTF::Detail::CallableWrapper<WTF::WorkQueueBase::dispatch(WTF::Function<void ()>&&)::$_0, void>::call() 23 0x7f986cd7b0d7 WTF::Function<void ()>::operator()() const 24 0x7f986eb33de1 WTF::RunLoop::performWork() 25 0x7f986ed45b69 WTF::RunLoop::RunLoop()::$_0::operator()(void*) const 26 0x7f986ed45b49 WTF::RunLoop::RunLoop()::$_0::__invoke(void*) 27 0x7f986ed45802 WTF::RunLoop::$_3::operator()(_GSource*, int (*)(void*), void*) const 28 0x7f986ed430a9 WTF::RunLoop::$_3::__invoke(_GSource*, int (*)(void*), void*) 29 0x7f986f75c49e ??? 30 0x7f986f75c710 g_main_context_dispatch 31 0x7f986ed43bb7 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock)
Attachments
test case (513 bytes, text/html)
2025-12-17 21:55 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2025-12-17 21:57:37 PST
This is reproducible with a API test of this PR https://github.com/WebKit/WebKit/pull/55444#issuecomment-3668418167
Fujii Hironori
Comment 2 2025-12-17 22:17:17 PST
EWS
Comment 3 2025-12-18 04:14:29 PST
Committed 304668@main (166ab722ba11): <https://commits.webkit.org/304668@main> Reviewed commits have been landed. Closing PR #55609 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-12-18 04:15:13 PST
Note You need to log in before you can comment on or make changes to this bug.