[OpenXR] ASSERTION FAILED: WebCore::GLContext::current() in ~OpenXRLayer https://bugs.webkit.org/show_bug.cgi?id=304384

Reviewed by Sergio Villar Senin.

An assertion failed in ~OpenXRLayer since there was no current GLContext. This
happened if the session was closed without any frames were requested.
makeContextCurrent() was called by `OpenXRCoordinator::beginFrame`. Thus, no
frame was requested, no current GLContext.

Call makeContextCurrent() in tryInitializeGraphicsBinding.

The test case of another PR will cover this case.
<https://github.com/WebKit/WebKit/pull/55444>

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::tryInitializeGraphicsBinding):
(WebKit::OpenXRCoordinator::beginFrame):
(WebKit::OpenXRCoordinator::endFrame):

Canonical link: https://commits.webkit.org/304668@main